welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:-15: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet:-14: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Poucet:0: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^