welcome.lessons.welcome.loopdowhile.Poucet.scala.code
w
while(!estFaceMur && !sortieTrouvee()){avance()}
droite}
